--- a/404.html
+++ b/404.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campaign Microsite</title>
     <meta name="Description" content="This is a template for a Homebrewery Styled D&amp;D Microsite">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/prism-base16-monokai.dark.css">
-    <link rel="stylesheet" href="/css/phb.css">
-    <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="Campaign Microsite">
+    <link rel="stylesheet" href="/eleventy-dnd-microsite-template/css/index.css">
+    <link rel="stylesheet" href="/eleventy-dnd-microsite-template/css/prism-base16-monokai.dark.css">
+    <link rel="stylesheet" href="/eleventy-dnd-microsite-template/css/phb.css">
+    <link rel="alternate" href="/eleventy-dnd-microsite-template/feed.xml" type="application/atom+xml" title="Campaign Microsite">
   </head>
   <body>
     <header>
       <div class="wrapper row">
         <div class="home">
-          <a href="/">Campaign Microsite</a>
+          <a href="/eleventy-dnd-microsite-template/">Campaign Microsite</a>
           <small>This is a template for a Homebrewery Styled D&amp;D Microsite</small>
         </div>
         <nav>
           <ul class="nav">
               <li class="nav-item">
-                <a href="/">Sessions</a>
+                <a href="/eleventy-dnd-microsite-template/">Sessions</a>
               </li>
               <li class="nav-item">
-                <a href="/primer/">Primer</a>
+                <a href="/eleventy-dnd-microsite-template/primer/">Primer</a>
               </li>
           </ul>
         </nav>
@@ -32,7 +32,7 @@
 
     <main class="wrapper ">
       <h1 id="content-not-found.">Content not found. <a class="direct-link" href="#content-not-found.">#</a></h1>
-<p>Go <a href="/">home</a>.</p>
+<p>Go <a href="/eleventy-dnd-microsite-template/">home</a>.</p>
 
 
     </main>
@@ -43,6 +43,6 @@
       </a>
     </footer>
 
-    <!-- Current page: /404.html -->
+    <!-- Current page: /eleventy-dnd-microsite-template/404.html -->
   </body>
 </html>
