--- a/primer/index.html
+++ b/primer/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campaign Primer</title>
     <meta name="Description" content="This is a template for a Homebrewery Styled D&amp;D Microsite">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/prism-base16-monokai.dark.css">
-    <link rel="stylesheet" href="/css/phb.css">
-    <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="Campaign Microsite">
+    <link rel="stylesheet" href="/eleventy-dnd-microsite-template/css/index.css">
+    <link rel="stylesheet" href="/eleventy-dnd-microsite-template/css/prism-base16-monokai.dark.css">
+    <link rel="stylesheet" href="/eleventy-dnd-microsite-template/css/phb.css">
+    <link rel="alternate" href="/eleventy-dnd-microsite-template/feed.xml" type="application/atom+xml" title="Campaign Microsite">
   </head>
   <body>
     <header>
       <div class="wrapper row">
         <div class="home">
-          <a href="/">Campaign Microsite</a>
+          <a href="/eleventy-dnd-microsite-template/">Campaign Microsite</a>
           <small>This is a template for a Homebrewery Styled D&amp;D Microsite</small>
         </div>
         <nav>
           <ul class="nav">
               <li class="nav-item">
-                <a href="/">Sessions</a>
+                <a href="/eleventy-dnd-microsite-template/">Sessions</a>
               </li>
               <li class="nav-item nav-item-active">
-                <a href="/primer/">Primer</a>
+                <a href="/eleventy-dnd-microsite-template/primer/">Primer</a>
               </li>
           </ul>
         </nav>
@@ -36,7 +36,7 @@
 <p>This is a page you should fill out with details about the campaign world and set up the story.</p>
 
 
-<p><a href="/">← Home</a></p>
+<p><a href="/eleventy-dnd-microsite-template/">← Home</a></p>
 
     </main>
 
@@ -46,6 +46,6 @@
       </a>
     </footer>
 
-    <!-- Current page: /primer/ -->
+    <!-- Current page: /eleventy-dnd-microsite-template/primer/ -->
   </body>
 </html>
